tests/stacks/ibm/application/notebooks/test_data/expected/apps_v1_deployment_jupyter-web-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jupyter-web-app
    app.kubernetes.io/component: jupyter-web-app
    app.kubernetes.io/name: jupyter-web-app
    kustomize.component: jupyter-web-app
  name: jupyter-web-app-deployment
  namespace: kubeflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jupyter-web-app
      app.kubernetes.io/component: jupyter-web-app
      app.kubernetes.io/name: jupyter-web-app
      kustomize.component: jupyter-web-app
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: jupyter-web-app
        app.kubernetes.io/component: jupyter-web-app
        app.kubernetes.io/name: jupyter-web-app
        kustomize.component: jupyter-web-app
    spec:
      containers:
      - env:
        - name: ROK_SECRET_NAME
          valueFrom:
            configMapKeyRef:
              key: ROK_SECRET_NAME
              name: jupyter-web-app-parameters
        - name: UI
          valueFrom:
            configMapKeyRef:
              key: UI
              name: jupyter-web-app-parameters
        - name: USERID_HEADER
          valueFrom:
            configMapKeyRef:
              key: userid-header
              name: kubeflow-config-gd2fcdh646
        - name: USERID_PREFIX
          valueFrom:
            configMapKeyRef:
              key: userid-prefix
              name: kubeflow-config-gd2fcdh646
        image: gcr.io/kubeflow-images-public/jupyter-web-app:vmaster-ge4456300
        imagePullPolicy: Always
        name: jupyter-web-app
        ports:
        - containerPort: 5000
        volumeMounts:
        - mountPath: /etc/config
          name: config-volume
      serviceAccountName: jupyter-web-app-service-account
      volumes:
      - configMap:
          name: jupyter-web-app-jupyter-web-app-config
        name: config-volume
