tests/stacks/ibm/application/notebooks/test_data/expected/apps_v1_deployment_notebook-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: notebook-controller
    app.kubernetes.io/component: notebook-controller
    app.kubernetes.io/name: notebook-controller
    kustomize.component: notebook-controller
  name: notebook-controller-deployment
  namespace: kubeflow
spec:
  selector:
    matchLabels:
      app: notebook-controller
      app.kubernetes.io/component: notebook-controller
      app.kubernetes.io/name: notebook-controller
      kustomize.component: notebook-controller
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: notebook-controller
        app.kubernetes.io/component: notebook-controller
        app.kubernetes.io/name: notebook-controller
        kustomize.component: notebook-controller
    spec:
      containers:
      - command:
        - /manager
        env:
        - name: USE_ISTIO
          valueFrom:
            configMapKeyRef:
              key: USE_ISTIO
              name: notebook-controller-config
        - name: ISTIO_GATEWAY
          valueFrom:
            configMapKeyRef:
              key: ISTIO_GATEWAY
              name: notebook-controller-config
        image: uhub.service.ucloud.cn/a4x-kubeflow/kubeflow-images-public/notebook-controller:vmaster-g6eb007d0
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /metrics
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
        name: manager
      serviceAccountName: notebook-controller-service-account
